--- a/api/resources/locales/es/messages.json
+++ b/api/resources/locales/es/messages.json
@@ -1,6 +1,7 @@
 {
   "badRequest": "Hay algún problema con la solicitud, verifique que cumpla con los parámetros",
   "resource.notfound": "No se encontraron resultados para la búsqueda",
+  "user.email_already_used": "Este email ya está en uso",
   "user.invalid_credentials": "Credenciales incorrectas",
   "validation.errors": "Errores de validación"
 }
